--- a/Week 0/numpy-tutorial.ipynb
+++ b/Week 0/numpy-tutorial.ipynb
@@ -280,9 +280,9 @@
     "#np.array([[1,2,3,4,5],[6,7,8,9,10]])\n",
     "\n",
     "# Write code below:\n"
-    "arr7=np.array(np.arange(1,11))",
-    "arr8=arr7.reshape(2,5)",
-    "arr8",
+    "arr7=np.array(np.arange(1,11))\n",
+    "arr8=arr7.reshape(2,5)\n",
+    "arr8"
    ]
   },
   {
