--- a/Week 0/numpy-tutorial.ipynb
+++ b/Week 0/numpy-tutorial.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.0.1\n"
+      "2.3.5\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -59,7 +59,15 @@
     "id": "F8jLndud4vn4",
     "outputId": "e1841e99-7989-4af9-aef9-7112c2412871"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n"
+     ]
+    }
+   ],
    "source": [
     "# Is it necessary to always use \"np\" as an alias for numpy? Uncomment the line below and check it out\n",
     "\n",
@@ -269,30 +277,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "id": "99cYx7qrSRDZ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4,  5],\n",
+       "       [ 6,  7,  8,  9, 10]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# What's the easiest way to create an array with shape (2,5) that returns\n",
     "# the same array as the statement below? (Hint: Use the \"numpy.arange\" function)\n",
     "#np.array([[1,2,3,4,5],[6,7,8,9,10]])\n",
     "\n",
-    "# Write code below:\n"
+    "# Write code below:\n",
+    "arr7=np.array(np.arange(1,11))\n",
+    "arr8=arr7.reshape(2,5)\n",
+    "arr8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "id": "g5OPTdbFTtXk"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# numpy has some convenient functions to create certain special arrays ...\n",
     "# How would you create a numpy array with shape (3,10) that contains all 0's?\n",
-    "# Write code below:\n"
+    "# Write code below:\n",
+    "arr9=np.zeros(shape=(3,10))\n",
+    "arr9"
    ]
   },
   {
@@ -1356,7 +1394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
